--- a/trunk/war/css/listr.css
+++ b/trunk/war/css/listr.css
@@ -1,5 +1,5 @@
-body { margin: 0; padding: 0 }
-
+body { margin: 0; padding: 0; font-size: 1.2em }
+img { border: 0 }
 #menu {
    height: 52px;
    padding: 0 5px;
@@ -11,5 +11,12 @@ body { margin: 0; padding: 0 }
    z-index: 999999;
    background: #eee;
 }
-#menu img {padding: 10px; border: 0;}
-#content {position:absolute;top:53px;padding: 0 3px}
+#menu img {padding: 10px }
+#content { width: 100%;position:absolute;top:53px;padding: 0;overflow: auto;}
+table { background-color: #aaa; width: 100%; border: 0; margin: 0; border-spacing: 0 }
+tr { background-color: #fff; padding-bottom: 1px; border: 0; margin: 0 }
+td { padding: 0; margin: 0; border: 0 }
+.right { float: right; }
+.row { height: 52px; clear: both }
+.rowBorder { border-bottom-color: #aaa; border-bottom-width: 1px; border-bottom-style: solid }
+.row div { padding: 10px; vertical-align: baseline; }
